add click and keypress events to app.js

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
           placeholder="Add your task"
         />
         <i class="fa-solid fa-plus" id="AddUpdateClick" alt="+"></i>
-        <ul id="list-items" class="list-items"></ul>
       </main>
+      <section class="todo-lists">
+        <ul id="list-items" class="list-items"></ul>
+      </section>
     </div>
     <script src="app.js" type="text/javascript"></script>
   </body>
