--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <div class="container">
       <header class="todo-header">
         <h2>ToDo List</h2>
-        <img src="todo-lista.gif" height="50px" alt="todo-list-gif" />
+        <img src="todo-lista.gif" height="50px" alt="todo-list-gif" /><br />
       </header>
-
+      <nav>
+        <p class="result"></p>
+      </nav>
       <main class="todo-body">
         <input
           type="text"
@@ -30,7 +32,11 @@
         <i class="fa-solid fa-plus" id="AddUpdateClick" alt="+"></i>
       </main>
       <section class="todo-lists">
-        <ul id="list-items" class="list-items"></ul>
+        <ul id="list-container" class="list-container">
+          <!-- <li class="checked">Task 1</li>
+          <li>Task 2</li>
+          <li>Task 3</li> -->
+        </ul>
       </section>
     </div>
     <script src="app.js" type="text/javascript"></script>
