add style (background images)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           class="todo-input"
           placeholder="Add your task"
         />
-        <i class="fa-solid fa-plus" id="AddUpdateClick" alt="+"></i>
+        <i class="fa-solid fa-plus" id="addDeleteClick" alt="+"></i>
       </main>
       <section class="todo-lists">
         <ul id="list-container" class="list-container">
