--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <div class="container">
       <header class="todo-header">
         <h2>ToDo List</h2>
-        <img src="todo-lista.gif" height="50px" alt="todo-list-gif" /><br />
+        <img
+          src="assets/todo-lista.gif"
+          height="50px"
+          alt="todo-list-gif"
+        /><br />
       </header>
       <nav>
         <p class="result"></p>
