--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <li>Task 3</li> -->
         </ul>
       </section>
+      <section class="clearSection">
+        <button class="clearBtn">Clear</button>
+      </section>
     </div>
     <script src="app.js" type="text/javascript"></script>
   </body>
