seperate one function into two

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <main class="todo-body">
         <input
           type="text"
-          id="todoText"
+          id="todo-value"
           class="todo-input"
           placeholder="Add your task"
         />
-        <i class="fa-solid fa-plus" id="addDeleteClick" alt="+"></i>
+        <i class="fa-solid fa-plus" id="add-task" alt="+"></i>
       </main>
       <section class="todo-lists">
         <ul id="list-container" class="list-container">
