--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         /><br />
       </header>
       <div>
-        <p class="result"></p>
+        <p class="result">
+          <!-- display delete messages  -->
+        </p>
       </div>
       <main class="todo-main">
         <input
@@ -39,19 +41,14 @@
         <i class="fa-solid fa-plus" id="add-task" alt="+"></i>
       </main>
       <section class="todo-lists">
-        <ul id="list-container" class="list-container"></ul>
+        <ul id="list-container" class="list-container">
+          <!-- display toDo list items (li) -->
+        </ul>
       </section>
-      <section class="clearSection">
-        <button class="clearBtn">Clear</button>
+      <section class="clear-section">
+        <button class="clear-btn">Clear</button>
       </section>
     </div>
-    <script src="app.js" type="text/javascript"></script>
+    <script src="app.js"></script>
   </body>
 </html>
-
-<!-- <ul>
-  <li class="checked">
-    <div>`${inputvalue}`</div>
-    <span><i class="fa-solid fa-trash-can todo-controls"></i></span>
-  </li>
-</ul> -->
