add example task items into ul tag

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       <section class="todo-lists">
         <ul id="list-container" class="list-container">
           <!-- display toDo list items (li) -->
+          <!-- <li class="">
+            <div class="item-setting">Task - 1</div>
+            <span><i class="fa-solid fa-trash-can todo-control"></i></span>
+          </li> -->
         </ul>
       </section>
       <section class="clear-section">
